# selection_tool

./: .gitignore  MANIFEST.in  README.md  demo.py  example.py  requirements.txt  setup.cfg
src/selection_tool/: __init__.py  _general_utils.py  _specimen_utils.py  _viewer_utils.py  selection_tool.py
