[metadata]
name = selection_tool
version = 0.0.1
author = Ruben T Lucassen
author_email = r.t.lucassen@umcutrecht.nl
description = selection tool for whole slide images
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files =
    LICENSE
url = https://github.com/RTLucassen/slide_selection_tool
classifiers = 
    Programming Language :: Python :: 3

[options]
package_dir =
    =src
install_requires =
    numpy >= 1.22
    pandas >= 1.5
    PyQt5 >= 5.15.7  
    natsort >= 8.1
    SimpleITK >= 2.2
    pyqtdarktheme >= 1.2.1
    slideloader @ git+file://C:/Users/rlucasse/Documents/repositories/slideloader/.git
