[metadata]
name = selection_tool
version = 0.0.1
author = Ruben T Lucassen
author_email = r.t.lucassen@umcutrecht.nl
description = Selection tool for whole slide images
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files =
    LICENSE
url = https://github.com/RTLucassen/selection_tool
classifiers = 
    Programming Language :: Python :: 3.9

[options]
package_dir =
    =src
install_requires =
    numpy >= 1.22
    scipy >= 1.11
    pandas >= 1.5
    PyQt5 >= 5.15.7  
    natsort >= 8.1
    tqdm >= 4.64
    SimpleITK >= 2.2
    requests >= 2.31
    pyqtdarktheme >= 1.2.1
    slideloader @ git+https://github.com/RTLucassen/slideloader

[options.package_data]
* = *.ttf, *.txt
